// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationView module renders as expected with discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <input
                  aria-label="name"
                  className="bx--text-input bx--text__input"
                  disabled={false}
                  id="name"
                  onChange={[Function]}
                  onClick={[Function]}
                  spellCheck={false}
                  type="text"
                  value="policy-grc"
                />
              </div>
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The namespace to create and store the policy on the hub cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="Choose an item"
                className="bx--dropdown bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex={null}
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="namespace"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                    htmlFor="downshift-0-input"
                  >
                    The namespace to create and store the policy on the hub cluster.
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The parameter section that describes which set of rules will validate a cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="specs"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="specs"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-1-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for template to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="Fill the required parameter field to select the cluster where your policy is applied. The placement policy and placement binding are required, and added into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="clusters"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="clusters"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="The name or names of security standards your policy should validate. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="standards"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="standards"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="A security control category represent specific requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="categories"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="categories"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-4-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="The control contains the instructions for ensuring that a policy meets the security requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="controls"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="controls"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-5-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="Represents how violations are handled as defined in the resource."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <div
                  className="bx--radio-button-group radio-button-group"
                >
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-inform"
                      checked={true}
                      className="bx--radio-button"
                      id="remediation-inform"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="false"
                    />
                    <label
                      aria-label="Inform - Reports the violation, which requires manual remediation."
                      className="bx--radio-button__label"
                      htmlFor="remediation-inform"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Inform - Reports the violation, which requires manual remediation.
                    </label>
                  </div>
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-enforce"
                      checked={false}
                      className="bx--radio-button"
                      id="remediation-enforce"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="true"
                    />
                    <label
                      aria-label="Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported."
                      className="bx--radio-button__label"
                      htmlFor="remediation-enforce"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="Select to disable the policy from being propagated to the managed cluster. If selected, the policy can be re-enabled from the dropdown menu in the policies table."
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="bx--form-item bx--checkbox-wrapper"
              >
                <input
                  aria-label="disabled"
                  checked={false}
                  className="bx--checkbox"
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="bx--checkbox-label checkbox"
                  htmlFor="disabled"
                  title={null}
                >
                  <span
                    className="bx--visually-hidden"
                  >
                    
                  </span>
                </label>
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected with empty discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <input
                  aria-label="name"
                  className="bx--text-input bx--text__input"
                  disabled={false}
                  id="name"
                  onChange={[Function]}
                  onClick={[Function]}
                  spellCheck={false}
                  type="text"
                  value="policy-grc"
                />
              </div>
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The namespace to create and store the policy on the hub cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="Choose an item"
                className="bx--dropdown bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex={null}
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="namespace"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                    htmlFor="downshift-6-input"
                  >
                    The namespace to create and store the policy on the hub cluster.
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The parameter section that describes which set of rules will validate a cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="specs"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="specs"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-7-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for template to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="Fill the required parameter field to select the cluster where your policy is applied. The placement policy and placement binding are required, and added into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="clusters"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="clusters"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-8-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="The name or names of security standards your policy should validate. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="standards"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="standards"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-9-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="A security control category represent specific requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="categories"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="categories"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-10-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="The control contains the instructions for ensuring that a policy meets the security requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="controls"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="controls"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-11-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Begin typing to search for label to select"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="Represents how violations are handled as defined in the resource."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <div
                  className="bx--radio-button-group radio-button-group"
                >
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-inform"
                      checked={true}
                      className="bx--radio-button"
                      id="remediation-inform"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="false"
                    />
                    <label
                      aria-label="Inform - Reports the violation, which requires manual remediation."
                      className="bx--radio-button__label"
                      htmlFor="remediation-inform"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Inform - Reports the violation, which requires manual remediation.
                    </label>
                  </div>
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-enforce"
                      checked={false}
                      className="bx--radio-button"
                      id="remediation-enforce"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="true"
                    />
                    <label
                      aria-label="Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported."
                      className="bx--radio-button__label"
                      htmlFor="remediation-enforce"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="Select to disable the policy from being propagated to the managed cluster. If selected, the policy can be re-enabled from the dropdown menu in the policies table."
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="bx--form-item bx--checkbox-wrapper"
              >
                <input
                  aria-label="disabled"
                  checked={false}
                  className="bx--checkbox"
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="bx--checkbox-label checkbox"
                  htmlFor="disabled"
                  title={null}
                >
                  <span
                    className="bx--visually-hidden"
                  >
                    
                  </span>
                </label>
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected without discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                creation.view.policy.name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <input
                  aria-label="name"
                  className="bx--text-input bx--text__input"
                  disabled={false}
                  id="name"
                  onChange={[Function]}
                  onClick={[Function]}
                  spellCheck={false}
                  type="text"
                  value="policy-grc"
                />
              </div>
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.namespace.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="Choose an item"
                className="bx--dropdown bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex={null}
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="namespace"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="bx--list-box__label"
                    htmlFor="downshift-12-input"
                  >
                    The namespace to create and store the policy on the hub cluster.
                  </span>
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.specs
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.specs.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="specs"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="specs"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-13-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="creation.view.policy.select.specs"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.selector
                <div
                  content="policy.create.selectors.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="clusters"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="clusters"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-14-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="creation.view.policy.select.selectors"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.standards
                <div
                  content="policy.create.standards.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="standards"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="standards"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-15-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="creation.view.policy.select.standards"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.categories
                <div
                  content="policy.create.categories.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="categories"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="categories"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-16-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="creation.view.policy.select.categories"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.controls
                <div
                  content="policy.create.controls.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-label="controls"
                className="bx--multi-select bx--combo-box bx--list-box"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="listbox"
                tabIndex="-1"
              >
                <div
                  aria-controls={null}
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="controls"
                  aria-owns={null}
                  className="bx--list-box__field"
                  data-toggle={true}
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  tabIndex="0"
                  type="button"
                >
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-expanded={false}
                    autoComplete="off"
                    className="bx--text-input"
                    disabled={false}
                    id="downshift-17-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="creation.view.policy.select.controls"
                    role="combobox"
                    value=""
                  />
                  
                  <div
                    className="bx--list-box__menu-icon"
                  >
                    <svg
                      alt="Open menu"
                      aria-label="Open menu"
                      fillRule="evenodd"
                      focusable="false"
                      height="5"
                      role="img"
                      viewBox="0 0 10 5"
                      width="10"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M0 0l5 4.998L10 0z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                creation.view.policy.remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.remediation.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="bx--form-item"
              >
                <div
                  className="bx--radio-button-group radio-button-group"
                >
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-inform"
                      checked={true}
                      className="bx--radio-button"
                      id="remediation-inform"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="false"
                    />
                    <label
                      aria-label="Inform - Reports the violation, which requires manual remediation."
                      className="bx--radio-button__label"
                      htmlFor="remediation-inform"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Inform - Reports the violation, which requires manual remediation.
                    </label>
                  </div>
                  <div
                    className="radio-button bx--radio-button-wrapper radioButtonWrapper"
                  >
                    <input
                      aria-label="remediation-enforce"
                      checked={false}
                      className="bx--radio-button"
                      id="remediation-enforce"
                      name="radio-button-group"
                      onChange={[Function]}
                      type="radio"
                      value="true"
                    />
                    <label
                      aria-label="Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported."
                      className="bx--radio-button__label"
                      htmlFor="remediation-enforce"
                    >
                      <span
                        className="bx--radio-button__appearance"
                      />
                      Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              creation.view.policy.disabled
              <div
                content="policy.create.disabled.tooltip"
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="bx--form-item bx--checkbox-wrapper"
              >
                <input
                  aria-label="disabled"
                  checked={false}
                  className="bx--checkbox"
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
                <label
                  className="bx--checkbox-label checkbox"
                  htmlFor="disabled"
                  title={null}
                >
                  <span
                    className="bx--visually-hidden"
                  >
                    
                  </span>
                </label>
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders with notification on general error 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--error overview-notification"
  kind="error"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      alt="closes notification"
      aria-label="closes notification"
      className="bx--inline-notification__icon"
      fillRule="evenodd"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        closes notification
      </title>
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM3.293 4.707l8 8 1.414-1.414-8-8-1.414 1.414z"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      >
        
      </p>
      <div
        className="bx--inline-notification__subtitle"
      >
        An unexpected error occurred. Try again.
      </div>
    </div>
  </div>
  <button
    className="bx--inline-notification__close-button"
    onClick={[Function]}
    title="close icon"
    type="button"
  >
    <svg
      alt="close icon"
      aria-label="close icon"
      className="bx--inline-notification__close-icon"
      fillRule="evenodd"
      height="10"
      role="img"
      viewBox="0 0 10 10"
      width="10"
    >
      <title>
        close icon
      </title>
      <path
        d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
      />
    </svg>
  </button>
</div>
`;

exports[`CreationView module renders with notification on permission error 1`] = `
<div
  className="bx--inline-notification bx--inline-notification--error overview-notification"
  kind="error"
  role="alert"
>
  <div
    className="bx--inline-notification__details"
  >
    <svg
      alt="closes notification"
      aria-label="closes notification"
      className="bx--inline-notification__icon"
      fillRule="evenodd"
      height="16"
      role="img"
      viewBox="0 0 16 16"
      width="16"
    >
      <title>
        closes notification
      </title>
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zM3.293 4.707l8 8 1.414-1.414-8-8-1.414 1.414z"
      />
    </svg>
    <div
      className="bx--inline-notification__text-wrapper"
    >
      <p
        className="bx--inline-notification__title"
      >
        
      </p>
      <div
        className="bx--inline-notification__subtitle"
      >
        You do not have permission to create policies in this namespace
      </div>
    </div>
  </div>
  <button
    className="bx--inline-notification__close-button"
    onClick={[Function]}
    title="close icon"
    type="button"
  >
    <svg
      alt="close icon"
      aria-label="close icon"
      className="bx--inline-notification__close-icon"
      fillRule="evenodd"
      height="10"
      role="img"
      viewBox="0 0 10 10"
      width="10"
    >
      <title>
        close icon
      </title>
      <path
        d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
      />
    </svg>
  </button>
</div>
`;

exports[`CreationView module renders with spinner when loading 1`] = `
<span
  aria-valuetext="Loading..."
  className="pf-c-spinner pf-m-xl patternfly-spinner"
  role="progressbar"
>
  <span
    className="pf-c-spinner__clipper"
  />
  <span
    className="pf-c-spinner__lead-ball"
  />
  <span
    className="pf-c-spinner__tail-ball"
  />
</span>
`;
